site/assets/less/flexi_shared.less
/* ... */
#file-upload {
	font-size: 11px;
	width: 246px;
	height: 24px;
	border-radius: 6px;
	min-width: 40%;
}



/**********************************************
 * Highlighting selected choices for select2 JS
 **********************************************/

.fc_filter_html .select2-search-choice div,
.select2-container .select2-choice.fc_highlight span,
.fc_highlight {
	color: darkorange;
	font-weight: bold;
}
.select2-container .select2-choice.fc_highlight_disabled span,
.fc_highlight_disabled {
	color: gray;
	font-weight: normal;
	text-decoration: line-through;
	font-style: italic;
}


/**********************************
 * Blocking overlay during form,
 * being applied and page reloading
 **********************************/
 
#fc_filter_form_blocker {
	display: none;
	z-index: 1000;
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}
#fc_filter_form_blocker .fc_blocker_opacity {
	display: block;
	z-index: 1000;
	position: absolute;
	top: 0;
	left: 0;
	opacity: 0.3;
	filter: alpha(opacity=30);
	background-color: #000;
	width: 100%;
	height: 100%;
}
#fc_filter_form_blocker .fc_blocker_content {
	display: block;
	z-index: 1001;
	position: fixed;
	top: 200px;
	left: 40%;
	color: black;
	background: white 30px 40px no-repeat;
	opacity: 1;
	filter: alpha(opacity=100);
	width: auto;
	padding: 20px 0px 26px 30px;
	margin: 0px;
	font-size: 12px;
	font-weight: bold;
	border: 1px solid lightgray;
	border-radius: 8px;
	text-align: left;
}
#fc_filter_form_blocker .fc_blocker_bar {
	display: block;
	width: 300px;
	height: 22px;
	border-radius: 4px;
	background-color: #f5f5f5;
	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
	box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
	position: relative;
	left: -15px;
	top: 6px;
}
#fc_filter_form_blocker .fc_blocker_bar div {
	border-radius: 4px;
	display: block;
	height: 100%;
	color: #fff;
	text-align: right;
	line-height: 22px;
	width: 0;
	background-color: #0099ff;
}

